@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.postimees.ee" version="0.0.9" name="Postimees Live" provider-name="Üllar Pajus [yllar.pajus@gmail.com]">
+<addon id="plugin.video.postimees.ee" version="0.0.9" name="Postimees Pleier" provider-name="Üllar Pajus [yllar.pajus@gmail.com]">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
         <import addon="script.module.buggalo" version="1.1.2"/>
-	<import addon="script.module.beautifulsoup" version="3.2.1"/>
+	    <import addon="script.module.beautifulsoup4" version="4.3.1"/>
     </requires>
     <extension point="xbmc.python.pluginsource" library="addon.py">
         <provides>video</provides>
     </extension>
     <extension point="xbmc.addon.metadata">
-        <summary lang="en">Watch Postimees live streams</summary>
-        <summary lang="et">Vaata Postimehe ülekandeid</summary>
-        <description lang="en">This plugin allows you to see Postimees live streams.</description>
-	<description lang="et">Selle plugina abil saate vaadata Postimehe ülekandeid.</description>
+        <summary lang="en">Watch videos and streams from Postimees Pleier </summary>
+        <summary lang="et">Vaata Postimehe Pleieri saateid ja ülekandeid</summary>
+        <description lang="en">This plugin allows you to see Postimees Pleier streams and shows.</description>
+	<description lang="et">Selle plugina abil saate vaadata Postimehe Pleieri saateid ja ülekandeid.</description>
         <disclaimer lang="en">Some parts of this addon may not be legal in your country of residence - please check with your local laws. Plugin is as-is, without any warranty.</disclaimer>
         <disclaimer lang="et">Plugin on as-is ilma igasuguse garantiita.</disclaimer>
         <license>GPLv2</license>
