@@ -4,4 +4,5 @@
     <string id="201">The error message is:</string>
     <string id="202">Unable to find the stream</string>
     <string id="203">Schedule seems to be empty</string>
+    <string id="204">Older shows</string>
 </strings>
