@@ -4,4 +4,5 @@
     <string id="201">Veateade:</string>
     <string id="202">Striimi aadressi leidmine nurjus</string>
     <string id="203">Hetkel pole kavas ühtegi ülekannet</string>
+    <string id="204">Vanemad saated</string>
 </strings>
