@@ -1,3 +1,5 @@
+[B]Version 0.0.10[/B]
+- pleier.postimees.ee
 [B]Version 0.0.9[/B]
 - Stream lookup fix / Ülekande leidmise parandus
 [B]Version 0.0.8[/B]
